Added Http Exception filter and updated methods with comments.

--- a/src/Bowling/Bowling/Bowling.Api.csproj
+++ b/src/Bowling/Bowling/Bowling.Api.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bowling.Core\Bowling.Core.csproj" />
     <ProjectReference Include="..\Bowling.Game\Bowling.Game.csproj" />
   </ItemGroup>
 
