--- a/src/Bowling/Bowling.Game/Bowling.Game.csproj
+++ b/src/Bowling/Bowling.Game/Bowling.Game.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bowling.Core\Bowling.Core.csproj" />
+  </ItemGroup>
+
 </Project>
